Fixed issue where goal assessment container would "hang" on top of other pages after changing page by removing visibility transition.

--- a/goals-assessment-page.css
+++ b/goals-assessment-page.css
@@ -63,7 +63,7 @@
 .h5p-goals-assessment-page .assessment-specifications .assessment-container,
 .h5p-goals-assessment-page .goals-finished-assessed-view .goal-type-1:hover .assessment-specifications .assessment-container {
   padding-bottom: 0.5em;
-  transition: max-height 0.6s ease-in, opacity 0.5s ease-in, visibility 0.5s ease-in, margin 0s ease-out, padding 0s ease-out;
+  transition: max-height 0.6s ease-in, opacity 0.5s ease-in, margin 0s ease-out, padding 0s ease-out;
   transition-delay: 0.1s;
 }
 
@@ -72,7 +72,7 @@
 .h5p-goals-assessment-page .goals-finished-assessed-view .assessment-container .assessment-rating {
   max-height: 0;
   opacity: 0;
-  transition: max-height 0.5s linear, opacity 0.5s linear, visibility 0.5s ease, margin 0.6s ease-in, padding 0.6s ease-in;
+  transition: max-height 0.5s linear, opacity 0.5s linear, margin 0.6s ease-in, padding 0.6s ease-in;
   transition-delay: 0.1s;
 }
 
@@ -87,7 +87,7 @@
 
 .h5p-goals-assessment-page .goals-finished-assessed-view .assessment-wrapper {
   margin-bottom: 0.5em;
-  transition: max-height 0.6s ease-in, opacity 0.5s ease-in, visibility 0.5s ease-in, margin 0s ease-out, padding 0s ease-out;  transition-delay: 0.2s;
+  transition: max-height 0.6s ease-in, opacity 0.5s ease-in, margin 0s ease-out, padding 0s ease-out;  transition-delay: 0.2s;
 }
 
 /* ---------------------------- Specifications ------------------------------- */
@@ -99,8 +99,7 @@
   opacity: 0;
   padding: 0;
   margin: 0;
-  visibility: hidden;
-  transition: max-height 0.5s linear, opacity 0.5s linear, visibility 0.5s ease, margin 0.6s ease-in, padding 0.6s ease-in;
+  transition: max-height 0.5s linear, opacity 0.5s linear, margin 0.6s ease-in, padding 0.6s ease-in;
   transition-delay: 0.1s;
 }
 
@@ -108,14 +107,13 @@
 .h5p-goals-assessment-page .goals-finished-assessed-view .goal-type-1:hover .assessment-specifications .assessment-wrapper * {
   max-height: 50em;
   opacity: 1;
-  visibility: visible;
-  transition: max-height 0.6s ease-in, opacity 0.5s ease-in, visibility 0.5s ease-in, margin 0s ease-out, padding 0s ease-out;  transition-delay: 0.2s;
+  transition: max-height 0.6s ease-in, opacity 0.5s ease-in, margin 0s ease-out, padding 0s ease-out;  transition-delay: 0.2s;
 }
 
 .h5p-goals-assessment-page .assessment-specifications .assessment-wrapper,
 .h5p-goals-assessment-page .goals-finished-assessed-view .goal-type-1:hover .assessment-specifications .assessment-wrapper {
   margin-bottom: 0.75em;
-  transition: max-height 0.6s ease-in, opacity 0.5s ease-in, visibility 0.5s ease-in, margin 0s ease-out, padding 0s ease-out;  transition-delay: 0.2s;
+  transition: max-height 0.6s ease-in, opacity 0.5s ease-in, margin 0s ease-out, padding 0s ease-out;  transition-delay: 0.2s;
 }
 
 .h5p-goals-assessment-page .goals-assessment-view .goal-type-1 .assessment-specifications,
@@ -123,13 +121,12 @@
   margin: 0.75em;
   max-height: 50em;
   opacity: 1;
-  visibility: visible;
-  transition: max-height 0.6s ease-in, opacity 0.5s ease-in, visibility 0.5s ease-in, margin 0s ease-out, padding 0s ease-out;  transition-delay: 0.2s;
+  transition: max-height 0.6s ease-in, opacity 0.5s ease-in, margin 0s ease-out, padding 0s ease-out;  transition-delay: 0.2s;
 }
 
 .h5p-goals-assessment-page .goals-finished-assessed-view .goal-type-1:hover .assessment-specifications .assessment-container input.rating-box {
   margin-right: 1em;
-  transition: max-height 0.6s ease-in, opacity 0.5s ease-in, visibility 0.5s ease-in, margin 0s ease-out, padding 0s ease-out;
+  transition: max-height 0.6s ease-in, opacity 0.5s ease-in, margin 0s ease-out, padding 0s ease-out;
   transition-delay: 0.1s;
 }
 
@@ -138,7 +135,7 @@
 .h5p-goals-assessment-page .goals-finished-assessed-view .assessment-container:hover .assessment-rating {
   max-height: 50em;
   opacity: 1;
-  transition: max-height 0.6s ease-in, opacity 0.5s ease-in, visibility 0.5s ease-in, margin 0s ease-out, padding 0s ease-out;
+  transition: max-height 0.6s ease-in, opacity 0.5s ease-in, margin 0s ease-out, padding 0s ease-out;
   transition-delay: 0.1s;
 }
 
